[FIX] piccolo fix al padding

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                     <div class="content-space d-flex j-centre alin-it border2"><i class="fa-regular fa-user"></i>Team</div>
                     <div class="content-space d-flex j-centre alin-it border2"> <i class="fa-regular fa-building"></i>Azienda</div>
                     <div class="conteiner max-width d-flex j-content  wrap alin-strech open-sansus font-text">
-                        <ul class="border2 content-space list-style-none">
+                        <ul class="border2 content-space list-style-none padding-10">
                             <li>
                                 <h3 class="content-space1 d-flex alin-it">Professional</h3>
                             </li>
                             <li class="margin-top-30">
                                 €12.00
                             </li>
-                            <li class="margin-top-30">
+                            <li class="margin-top-30 color-grey">
                                 /mese
                             </li>
                             <li class="margin-top-30 d-flex">
@@ -126,7 +126,7 @@
                                 <div>Cartelle offline su dispositivi mobili</div>
                             </li>
                         </ul>
-                        <ul class="border2 content-space list-style-none" >
+                        <ul class="border2 content-space list-style-none padding-10" >
                             <li>
                                 <h3 class="content-space1 d-flex alin-it">Advanced</h3>
                             </li>
@@ -179,15 +179,15 @@
                                 <div>Cartelle offline ssu dispositivi mobili</div>
                             </li>
                         </ul>
-                        <ul class="border2 content-space list-style-none" >
+                        <ul class="border2 content-space list-style-none padding-10" >
                             <li>
                                 <h3 class="content-space1 d-flex alin-it">Enterprise</h3>
                             </li>
                             <li class="margin-top-30">
                                 €12.00
                             </li>
-                            <li class="margin-top-30">
-                                /mese
+                            <li class="margin-top-30  color-grey">
+                                -
                             </li>
                             <li class="margin-top-30 d-flex">
                                 <div><i class="fa-regular fa-user"></i></div>
@@ -237,7 +237,7 @@
                         <div class="border2 margin-top-30">
                             <div class="border content1 d-flex j-centre alin-it "><i class="fa-regular fa-building"></i>Team</div>
                         <div class=" content1 d-flex j-between">
-                            <ul class="border-top1 content1 d-flex j-between alin-it list-style-none">
+                            <ul class="border-top1 padding-10 content1 d-flex j-between alin-it list-style-none">
                                 <li>
                                     <h3 class="content1 d-flex  j-centre alin-it">Enterprise</h3>
                                 </li>
@@ -247,7 +247,7 @@
                             </ul>  
                         </div>
                         <div >
-                            <div class="alin-it">
+                            <div class="alin-it padding-10">
                                 <strong >contatta l'ufficio vendite per i prezzi</strong>
                                 <div class="margin-top-30 padding-b">
                                     Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
