[FIX] central img

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="content-space d-flex j-centre alin-it border2">Singolo</div>
-                    <div class="content-space d-flex j-centre alin-it border2"><i class="fa-regular fa-user"></i>Team</div>
-                    <div class="content-space d-flex j-centre alin-it border2"> <i class="fa-regular fa-building"></i>Azienda</div>
-                    <div class="conteiner max-width d-flex j-content  wrap alin-strech open-sansus font-text">
+                    <div class="conteiner max-width d-flex j-content gap wrap alin-strech open-sansus font-text">
+                        <div class="content-space d-flex j-centre alin-it border2">Singolo</div>
+                        <div class="content-space d-flex j-centre alin-it border2"><i class="fa-regular fa-user"></i>Team</div>
+                        <div class="content-space d-flex j-centre alin-it border2"> <i class="fa-regular fa-building"></i>Azienda</div>
                         <ul class="border2 content-space list-style-none padding-10">
                             <li>
                                 <h3 class="content-space1 d-flex alin-it">Professional</h3>
