--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="conteiner max-width d-flex j-content gap wrap alin-strech open-sansus font-text">
+                    <div class="conteiner max-width d-flex j-content gap-45 wrap alin-strech open-sansus font-text">
                         <div class="content-space d-flex j-centre alin-it border2">Singolo</div>
                         <div class="content-space d-flex j-centre alin-it border2"><i class="fa-regular fa-user"></i>Team</div>
                         <div class="content-space d-flex j-centre alin-it border2"> <i class="fa-regular fa-building"></i>Azienda</div>
@@ -305,7 +305,7 @@
         <div>
             <div class="d-flex j-centre alin-it wrap content1 margin d-top-80 bcolor-black">
                 <div class="conteiner max-width d-flex j-content alin-it wrap open-sansus font-text">
-                    <div class="content1 color-white d-flex j-content alin-it wrap margind-top-80 padding-left-right gap">
+                    <div class="content1 color-white gap d-flex j-content alin-it wrap margind-top-80 padding-left-right gap">
                         <ul class="list-style-none padding-top-right-bottom-40">
                             <li class="margin-top-10"><h3>Dropbox</h3></li>
                             <li class="margin-top-10">applicazione</li>
